[gd_scene load_steps=19 format=3 uid="uid://cvawlisrtbfqx"]

[ext_resource type="Script" path="res://UI/beginning_story.gd" id="1_08nrl"]
[ext_resource type="Texture2D" uid="uid://0nli3syni0vx" path="res://Assets/Others/night.png" id="1_40k7i"]
[ext_resource type="FontVariation" uid="uid://ckeuldwvf8rq5" path="res://Assets/Fonts/mcpe_font.tres" id="2_1ofhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vce1"]

[sub_resource type="Animation" id="Animation_aggcx"]
resource_name = "p1_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uy75h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("paragraph2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("paragraph3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("paragraph4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("paragraph5:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("paragraph6:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8nqvi"]
resource_name = "p1_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3i5wb"]
resource_name = "p2_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oqha6"]
resource_name = "p2_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b2lln"]
resource_name = "p3_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph3:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jglva"]
resource_name = "p3_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph3:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_827w3"]
resource_name = "p4_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph4:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l1dkf"]
resource_name = "p4_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph4:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l4myj"]
resource_name = "p5_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph5:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.984314)]
}

[sub_resource type="Animation" id="Animation_xsjik"]
resource_name = "p5_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph5:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.984314), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ts1xr"]
resource_name = "p6_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph6:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w81ou"]
resource_name = "p6_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paragraph6:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aiyae"]
_data = {
"RESET": SubResource("Animation_uy75h"),
"p1_in": SubResource("Animation_aggcx"),
"p1_out": SubResource("Animation_8nqvi"),
"p2_in": SubResource("Animation_3i5wb"),
"p2_out": SubResource("Animation_oqha6"),
"p3_in": SubResource("Animation_b2lln"),
"p3_out": SubResource("Animation_jglva"),
"p4_in": SubResource("Animation_827w3"),
"p4_out": SubResource("Animation_l1dkf"),
"p5_in": SubResource("Animation_l4myj"),
"p5_out": SubResource("Animation_xsjik"),
"p6_in": SubResource("Animation_ts1xr"),
"p6_out": SubResource("Animation_w81ou")
}

[node name="beginning_story" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08nrl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_40k7i")

[node name="paragraph1" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"In the heart of Ilaya Likas, a tranquil village embraced by nature's bounty,
a sudden shadow falls. Mahalia, the revered Babaylan, the guardian of
wisdom and healing, lies gravely ill. The air is thick with worry as the villagers
gather under the guiding hand of Datu Kisig.\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="paragraph2" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"Among the gathered, one stands ready to answer the call. You, the Alabay,
an apprentice with much yet to learn, but with a heart full of courage and
determination. The task ahead is daunting: to travel to Talahib, gather the
rarest of ingredients, and craft a potion to save Mahalia.\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="paragraph3" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"With blessings from the shaman and the support of your people, you
prepare for the journey. Armed with a map, a list of ingredients, and the
will to succeed, you set forth into the unknown. The fate of Mahalia, and the future of
Ilaya Likas, rest upon your shoulders.\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="paragraph4" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"As you leave the familiar comforts of home, the path to Talahib Island
stretches out before you. Each step marks the beginning of a profound
journey—one that will test your skills, your spirit, and your very soul. The
journey of an Alabay, destined to become the Babaylan.\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="paragraph5" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"Thus begins your quest, young Alabay. May the spirits guide your steps
and may your heart stay true, for the road ahead is fraught with peril, but
also with the promise of great wisdom and unparalleled strength.\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="paragraph6" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -36.0
offset_right = 448.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1ofhg")
text = "\"Your adventure awaits on the mysterious shores of Talahib Island, where
the wilds whisper secrets and ancient powers lie hidden. Step boldly, for
the journey to save Mahalia has just begun.”"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -168.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_1ofhg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vce1")
text = "Continue >>"
flat = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aiyae")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
